WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210746
[GTK4] Fix platform GDK includes
https://bugs.webkit.org/show_bug.cgi?id=210746
Summary
[GTK4] Fix platform GDK includes
Claudio Saavedra
Reported
2020-04-20 07:37:48 PDT
[GTK4] Fix platform GDK includes
Attachments
Patch
(1.39 KB, patch)
2020-04-20 07:38 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2020-04-20 07:38:34 PDT
Created
attachment 396975
[details]
Patch
EWS
Comment 2
2020-04-21 01:38:27 PDT
Committed
r260418
: <
https://trac.webkit.org/changeset/260418
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396975
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug