[GTK4] Fix platform GDK includes https://bugs.webkit.org/show_bug.cgi?id=210746

Reviewed by Carlos Garcia Campos.

* platform/graphics/PlatformDisplay.cpp: Wayland, X11, etc.
platform includes changed path, so update accordingly.


Canonical link: https://commits.webkit.org/223670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260418 268f45cc-cd09-0410-ab3c-d52691b4dbfc